# LichtFeld-Studio

./: CMakeLists.txt  THIRD_PARTY_LICENSES.md  vcpkg-configuration.json  vcpkg.json
.github/overlays/libsystemd/: vcpkg.json
.github/workflows/: clang-format.yml  nightly.yml  ubuntu.yml  windows.yml
cmake/: FetchUV.cmake
docker/: docker-compose.yml
docs/: Python_API_issues.md  Python_UI.md  plugin-dev-workflow.md  plugin-system.md
docs/plugins/: api-reference.md  getting-started.md
eval/: default_optimization_params.json  mcmc_optimization_params.json
gsplat/: Cameras.cuh  Ops.h  Rasterization.cpp
parameter/: default_optimization_params.json  loading_params.json  mcmc_optimization_params.json
scripts/: extract_strings.py  ppisp_report.py  validate_localization.py
src/app/: application.cpp  splash_screen.cpp
src/core/: CMakeLists.txt  argument_parser.cpp  parameters.cpp  path_utils.hpp  scene.cpp  splat_data.cpp  splat_data_4d.cpp  splat_data_transform.cpp
src/core/tensor/: CMakeLists.txt  cuda_stream_context.cpp  lazy_config.cpp  lazy_executor.cpp  lazy_ir.cpp  tensor.cpp  tensor_broadcast.cpp  tensor_exports.cu  tensor_fused_pointwise.cu  tensor_masking_ops.cpp  tensor_matrix_ops.cpp  tensor_movement_ops.cpp  tensor_ops.cu  tensor_random_ops.cpp  tensor_row_proxy.cpp  tensor_shape_ops.cpp  tensor_strided_ops.cu  tensor_unified_ops.cpp  tensor_warp_reduce.cu
src/io/: CMakeLists.txt  cache_image_loader.cpp  loader.cpp  loader_service.cpp  nvcodec_image_loader.cpp  nvcodec_image_loader.hpp  pipelined_image_loader.cpp
src/io/cuda/: image_format_kernels.cu  image_format_kernels.cuh
src/io/formats/: colmap.cpp  colmap.hpp  omg4_loader.cpp  omg4_loader.hpp  ply.cpp  transforms.cpp  transforms.hpp
src/io/loaders/: blender_loader.cpp  colmap_loader.cpp  four_d_loader.cpp  four_d_loader.hpp  fourd_loader.cpp  mesh_loader.cpp  omg4_loader.cpp  omg4_loader.hpp  ply_loader.cpp
src/mcp/: CMakeLists.txt  mcp_training_context.cpp  mcp_training_context.hpp
src/python/: CMakeLists.txt  gil.hpp  package_manager.cpp  plugin_runner.cpp  python_runtime.cpp  python_runtime.hpp  runner.cpp  subprocess.cpp  ui_hooks.cpp  ui_hooks.hpp
src/python/lfs/: module.cpp  notification_bridge.cpp  py_io.cpp  py_mesh2splat.cpp  py_mesh2splat.hpp  py_modal_registry.cpp  py_packages.cpp  py_params.cpp  py_rendering.cpp  py_rendering.hpp  py_rml.cpp  py_rml.hpp  py_scene.cpp  py_scene.hpp  py_selection.cpp  py_tensor.cpp  py_ui.cpp  py_ui.hpp  py_ui_context.cpp  py_ui_menus.cpp  py_ui_modals.cpp  py_ui_panels.cpp  python_panel_adapter.hpp  rml_python_panel_adapter.cpp  rml_python_panel_adapter.hpp
src/python/lfs_plugins/: about_panel.py  dev_setup.py  file_menu.py  flipbook_trainer.py  getting_started_panel.py  installer.py  manager.py  omg4_loader.py  panels.py  plugin_marketplace_panel.py  rendering_panel.py  rml_widgets.py  scene_panel.py  selection_groups.py  sequencer_panel.py  sequencer_section.py  status_bar_panel.py  toolbar.py  training_panel.py  transform_controls.py  types.py  validator.py
src/python/stubs/lichtfeld/: __init__.pyi  animation.pyi  app.pyi  build_info.pyi  io.pyi  keymap.pyi  log.pyi  mcp.pyi  ops.pyi  packages.pyi  plugins.pyi  scene.pyi  scripts.pyi  selection.pyi  undo.pyi
src/python/stubs/lichtfeld/pipeline/: __init__.pyi  edit.pyi  select.pyi  transform.pyi  undo.pyi
src/python/stubs/lichtfeld/ui/: __init__.pyi  action.pyi  key.pyi  mod.pyi  mouse.pyi  ops.pyi  rml.pyi  signals.pyi
src/rendering/: CMakeLists.txt  axes_renderer.cpp  bbox_renderer.cpp  camera_frustum_renderer.cpp  camera_frustum_renderer.hpp  condition_4d.cu  condition_4d.hpp  cuda_gl_interop.cpp  cuda_gl_interop.hpp  cuda_gl_kernels.cu  depth_compositor.cpp  ellipsoid_renderer.cpp  framebuffer_factory.hpp  gl_resources.hpp  grid_renderer.cpp  gs_rasterizer_tensor.cpp  gs_rasterizer_tensor.hpp  image_layout.hpp  mesh2splat.cpp  mesh_renderer.cpp  pivot_renderer.cpp  pivot_renderer.hpp  point_cloud_renderer.cpp  rendering_engine_impl.cpp  rendering_engine_impl.hpp  rendering_pipeline.cpp  rendering_pipeline.hpp  screen_renderer.cpp  shader.hpp  shader_manager.hpp  split_view_renderer.cpp  text_renderer.hpp  viewport_gizmo.cpp
src/sequencer/: timeline.cpp
src/training/: checkpoint.cpp  dataset.hpp  sequence_dataset.hpp  time_sampled_splat_model.hpp  trainer.cpp  trainer.hpp  training_setup.cpp  training_setup.hpp
src/training/components/: bilateral_grid.cpp  ppisp_controller_pool.cu  ppisp_file.cpp  sparsity_optimizer.cpp
src/training/kernels/: grad_alpha.cu  grad_alpha.hpp  mcmc_kernels.cu  mcmc_kernels.hpp  ssim.cu
src/training/losses/: photometric_loss.hpp
src/training/metrics/: metrics.cpp  metrics.hpp
src/training/optimizer/: adam_optimizer.cpp
src/training/rasterization/: fast_rasterizer.cpp  fast_rasterizer.hpp  gsplat_rasterizer.cpp  (+1 more)
src/visualizer/: CMakeLists.txt  visualizer_impl.cpp  visualizer_impl.hpp
tests/: CMakeLists.txt  benchmark_pipelined_loader.cpp  benchmark_strided_tensors.cpp  test_broadcast_benchmark.cpp  test_bug_regressions.cpp  test_checkpoint_resume.cpp  test_dtype_operations_comprehensive.cpp  test_expanded_tensor_ops.cpp  test_fastgs_kernels.cpp  test_four_d_loader.cpp  test_fourd_loader.cpp  test_fusion_benchmark.cpp  test_fusion_performance.cpp  test_global_time_context.cpp  test_gradient_accumulation.cpp  test_isolation.cpp  test_main.cpp  test_mask_loss.cpp  test_mcmc_memory_ops.cpp  test_mcmc_nan_fix.cpp  test_python_io.cpp  test_rotated_sh_correctness.cpp  test_scene_validity.cpp  test_sog_html_export.cpp  test_splat_data_4d.cpp  test_stride_bugs.cpp  test_strided_fill.cpp  test_tensor_indexing_advanced.cpp  test_tensor_lazy_ir.cpp  test_tensor_lazy_stateful_ops.cpp  test_tensor_masking.cpp  test_tensor_memory_planner.cpp  test_tensor_slicing_safety.cpp  test_tensor_storage_version.cpp  test_tensor_stream.cpp  test_tensor_stress.cpp  test_time_sampled_splat_model.cpp  test_undistort.cpp  test_unicode_paths_windows.cpp  test_uv_runner_proof.cpp  (+1 more)
tests/python/: test_plugin_system.py  test_time_sampled_model.py
(+282 files in other folders)
